@@ -1,0 +1,8 @@
+Title: wagner_titanus_topsense.airflow_deviation: New Check for Airflow Deviation in Wagner Titanus Top Sens devices
+Level: 1
+Component: checks
+Version: 1.2.5i3
+Date: 1398176335
+Class: feature
+
+
