@@ -46,7 +46,9 @@ wagner_titanus_topsense_info = [(".1.3.6.1.2.1.1",               [1,          # 
                                                                   245810000,   # tsBarGraph1String
                                                                   245820000,   # tsBarGraph2String
                                                                   245950000,   # tsD1ChamberValueString
-                                                                  246090000]), # tsD2ChamberValueString
+                                                                  246090000,   # tsD2ChamberValueString
+                                                                  245960000,   # tsD1AirFlowDeviationString
+                                                                  246100000]), # tsD2AirFlowDeviationString
                   ]
 
 def wagner_titanus_topsense_scan(oid):
@@ -243,6 +245,51 @@ check_info["wagner_titanus_topsense.chamber_deviation"] = {
     "inventory_function"    : inventory_wagner_titanus_topsense_chamber_deviation,
     "service_description"   : "Chamber Deviation Detector %s",
     "has_perfdata"          : True,
+    "snmp_info"             : wagner_titanus_topsense_info,
+    "snmp_scan_function"    : wagner_titanus_topsense_scan
+}
+
+#.
+#   .--air flow deviation--------------------------------------------------.
+#   |              _         __ _                     _                    |
+#   |         __ _(_)_ __   / _| | _____      __   __| | _____   __        |
+#   |        / _` | | '__| | |_| |/ _ \ \ /\ / /  / _` |/ _ \ \ / /        |
+#   |       | (_| | | |    |  _| | (_) \ V  V /  | (_| |  __/\ V /         |
+#   |        \__,_|_|_|    |_| |_|\___/ \_/\_/    \__,_|\___| \_/          |
+#   |                                                                      |
+#   '----------------------------------------------------------------------'
+
+wagner_titanus_topsense_airflow_deviation_default_values = (-20.0, -20.0, 20.0, 20.0)
+
+def inventory_wagner_titanus_topsense_airflow_deviation(info):
+    return [ ("1", "wagner_titanus_topsense_airflow_deviation_default_values"),
+             ("2", "wagner_titanus_topsense_airflow_deviation_default_values") ]
+
+def check_wagner_titanus_topsense_airflow_deviation(item, params, info):
+    lower_crit, lower_warn, upper_warn, upper_crit = params
+    status=0
+    if item == "1":
+        airflow_deviation = float(info[2][0][5])
+    elif item == "2":
+        airflow_deviation = float(info[2][0][6])
+    else:
+        return 3, "Airflow Deviation Detector %s not found in SNMP" % item
+
+    if airflow_deviation >= upper_warn or airflow_deviation <= lower_warn:
+        status = 1
+    if airflow_deviation >= upper_crit or airflow_deviation <= lower_crit:
+        status = 2
+
+    perfdata = [("airflow_deviation", airflow_deviation, upper_warn, upper_crit, 0)]
+
+    return status, "Airflow Deviation is %0.6f%%" % airflow_deviation, perfdata
+
+check_info["wagner_titanus_topsense.airflow_deviation"] = {
+    "check_function"        : check_wagner_titanus_topsense_airflow_deviation,
+    "inventory_function"    : inventory_wagner_titanus_topsense_airflow_deviation,
+    "service_description"   : "Airflow Deviation Detector %s",
+    "has_perfdata"          : True,
+    "group"                 : "airflow_deviation",
     "snmp_info"             : wagner_titanus_topsense_info,
     "snmp_scan_function"    : wagner_titanus_topsense_scan
 }
